Broaden API error and brand discoverability
